--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
+        "php": "^7.3|^8.1",
         "botman/botman": "^2.8",
         "botman/driver-facebook": "^1.11",
         "botman/driver-web": "^1.5",
